# doc-quality-scorer

./: .gitignore  README.md  pyproject.toml
examples/: README.md  cohesive_guide.md  run_demo.sh  subtle_degradation_guide.md
src/doc_quality_scorer/: __init__.py  cli.py  metrics.py  parser.py  report.py  scorer.py
tests/: test_metrics.py  test_parser.py  test_scorer.py
